--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,7 @@
     <link rel="icon" href="images/icon.webp" />
     <link rel="stylesheet" href="css/html5reset-1.6.1.min.css" />
     <link rel="stylesheet" href="css/base.min.css" />
+    <link rel="preload" href="css/*.css" as="style" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -53,7 +54,12 @@
               />
               <source srcset="images/icon.jpg" media="(max-width:500px)" />
               <source srcset="images/icon.webp" type="image/webp" />
-              <img class="icon" src="images/icon.jpg" alt="すなめぐ" />
+              <img
+                class="icon"
+                src="images/icon.jpg"
+                loading="lazy"
+                alt="すなめぐ"
+              />
             </picture>
           </a>
           <button
@@ -113,7 +119,12 @@
                 />
                 <source srcset="images/QR_LINE.jpg" media="(max-width:500px)" />
                 <source srcset="images/QR_LINE.webp" type="image/webp" />
-                <img class="qr" src="images/QR_LINE.jpg" alt="LINEのQRコード" />
+                <img
+                  class="qr"
+                  src="images/QR_LINE.jpg"
+                  loading="lazy"
+                  alt="LINEのQRコード"
+                />
               </picture>
 
               <a class="url" href="https://page.line.me/296lnbtf">公式LINE</a>
@@ -133,6 +144,7 @@
                 <img
                   class="qr"
                   src="images/QR_twitter.jpg"
+                  loading="lazy"
                   alt="TwitterのQRコード"
                 />
               </picture>
@@ -159,6 +171,7 @@
                 <img
                   class="qr"
                   src="images/sunagemu_megumi_qr.jpg"
+                  loading="lazy"
                   alt="InstagramのQRコード"
                 />
               </picture>
