--- a/students.html
+++ b/students.html
@@ -18,6 +18,7 @@
     <link rel="icon" href="images/icon.webp" />
     <link rel="stylesheet" href="css/html5reset-1.6.1.min.css" />
     <link rel="stylesheet" href="css/base.min.css" />
+    <link rel="preload" href="css/*.css" as="style" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -130,9 +131,10 @@
         <div class="container mt-4">
           <div id="long" class="row gy-3">
             <div class="col-lo-4 col-sm-6">
-              <script type="text/javascript" src="js/long.js"></script>
+              <script type="text/javascript" defer src="js/long.js"></script>
               <img
                 src="images/long/元氣亭バイト募集チラシ.jpg"
+                loading="lazy"
                 alt="アルバイト情報"
               />
             </div>
