--- a/about.html
+++ b/about.html
@@ -215,6 +215,6 @@
       crossorigin="anonymous"
     ></script>
     <script type="text/javascript" src="js/footerFixed.js"></script>
-    <script type="text/javascript" src="modernizr-custom.js"></script>
+    <script type="text/javascript" src="js/modernizr-custom.js"></script>
   </body>
 </html>
