--- a/company.html
+++ b/company.html
@@ -201,6 +201,6 @@
       crossorigin="anonymous"
     ></script>
     <script type="text/javascript" src="js/footerFixed.js"></script>
-    <script type="text/javascript" src="modernizr-custom.js"></script>
+    <script type="text/javascript" src="js/modernizr-custom.js"></script>
   </body>
 </html>
