--- a/home.html
+++ b/home.html
@@ -172,6 +172,7 @@
           <script
             src="https://platform.twitter.com/widgets.js"
             charset="utf-8"
+            defer
           ></script>
         </div>
       </div>
