--- a/company.html
+++ b/company.html
@@ -14,6 +14,7 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+    <script src="modernizr-custom.js"></script>
     <title>砂丘の恵みの納品依頼｜企業の方へ</title>
     <link rel="icon" href="images/icon.webp" />
     <link rel="stylesheet" href="css/html5reset-1.6.1.min.css" />
@@ -40,7 +41,7 @@
       gtag("config", "G-1KLQQXB3RW");
     </script>
   </head>
-  <body>
+  <body class="mv">
     <!-- header begin -->
     <header>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
