--- a/company.html
+++ b/company.html
@@ -185,6 +185,30 @@
           </div>
         </div>
       </div>
+      <div class="wrapper">
+        <h1>協力企業</h1>
+        <div class="row gy-3">
+          <div class="col-lo-4 col-sm-6">
+            <picture>
+              <source
+                srcset="images/company/BFロゴ.webp"
+                media="(max-width:500px)"
+                type="image/webp"
+              />
+              <source
+                srcset="images/company/BFロゴ.jpg"
+                media="(max-width:500px)"
+              />
+              <source srcset="images/company/BFロゴ.webp" type="image/webp" />
+              <img
+                src="images/company/BFロゴ.jpg"
+                loading="lazy"
+                alt="ビーフリー"
+              />
+            </picture>
+          </div>
+        </div>
+      </div>
     </main>
     <!-- main end -->
     <!-- footer begin -->
