--- a/students.html
+++ b/students.html
@@ -18,6 +18,7 @@
     <link rel="icon" href="images/icon.webp" />
     <link rel="stylesheet" href="css/html5reset-1.6.1.min.css" />
     <link rel="stylesheet" href="css/base.min.css" />
+    <script type="text/javascript" src="js/footerFixed.js"></script>
     <link rel="preload" href="css/*.css" as="style" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -131,6 +132,9 @@
         <div class="container mt-4">
           <div id="long" class="row gy-3">
             <div class="col-lo-4 col-sm-6">
+              <script type="text/javascript" defer src="js/long.js"></script>
+            </div>
+            <div class="col-lo-4 col-sm-6">
               <picture>
                 <source
                   srcset="images/long/元氣亭バイト募集チラシ.webp"
@@ -142,8 +146,8 @@
                   media="(max-width:500px)"
                 />
                 <source
-                  srcset="images/.webp"
-                  type="image/long/元氣亭バイト募集チラシwebp"
+                  srcset="images/long/元氣亭バイト募集チラシ.webp"
+                  type="image/webp"
                 />
                 <img
                   src="images/long/元氣亭バイト募集チラシ.jpg"
@@ -152,7 +156,6 @@
                 />
               </picture>
             </div>
-            <script type="text/javascript" defer src="js/long.js"></script>
           </div>
         </div>
         <div class="top"><a href="#">Topへ</a></div>
@@ -210,6 +213,5 @@
       crossorigin="anonymous"
     ></script>
     <script src="modernizr-custom.js"></script>
-    <script type="text/javascript" src="js/footerFixed.js"></script>
   </body>
 </html>
