--- a/company.html
+++ b/company.html
@@ -17,6 +17,7 @@
     <title>砂丘の恵みの納品依頼｜企業の方へ</title>
     <link rel="icon" href="images/icon.webp" />
     <link rel="stylesheet" href="css/html5reset-1.6.1.min.css" />
+    <script type="text/javascript" src="js/footerFixed.js"></script>
     <link rel="stylesheet" href="css/base.min.css" />
     <link rel="preload" href="css/*.css" as="style" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -45,8 +46,8 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="home.html"
-            ><picture>
+          <a class="navbar-brand" href="home.html">
+            <picture>
               <source
                 srcset="images/icon.webp"
                 media="(max-width:500px)"
@@ -218,13 +219,11 @@
       </div>
     </footer>
     <!-- footer end -->
-
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
     <script src="modernizr-custom.js"></script>
-    <script type="text/javascript" src="js/footerFixed.js"></script>
   </body>
 </html>
