--- a/contact.html
+++ b/contact.html
@@ -20,6 +20,9 @@
     <script type="text/javascript" src="js/footerFixed.js"></script>
     <link rel="stylesheet" href="css/base.min.css" />
     <link rel="preload" href="css/*.css" as="style" />
+    <link rel="preload" href="css/base.min.css" as="style" />
+    <link rel="preload" href="css/html5reset-1.6.1.min.css" as="style" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
