--- a/students.html
+++ b/students.html
@@ -19,7 +19,9 @@
     <link rel="stylesheet" href="css/html5reset-1.6.1.min.css" />
     <link rel="stylesheet" href="css/base.min.css" />
     <script type="text/javascript" src="js/footerFixed.js"></script>
-    <link rel="preload" href="css/*.css" as="style" />
+    <link rel="preload" href="css/base.min.css" as="style" />
+    <link rel="preload" href="css/html5reset-1.6.1.min.css" as="style" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
