--- a/record.html
+++ b/record.html
@@ -43,115 +43,117 @@
     </script>
   </head>
   <body class="mv">
-    <!-- header begin -->
-    <header>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="home.html"
-            ><picture>
-              <source
-                srcset="images/icon.webp"
-                media="(max-width:500px)"
-                type="image/webp"
-              />
-              <source srcset="images/icon.jpg" media="(max-width:500px)" />
-              <source srcset="images/icon.webp" type="image/webp" />
-              <img
-                class="icon"
-                src="images/icon.jpg"
-                loading="lazy"
-                alt="すなめぐ"
-              />
-            </picture>
-          </a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link" href="students.html">学生の方へ</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="company.html">企業の方へ</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="about.html">すなめぐとは</a>
-              </li>
-              <li class="nav-item">
-                <a
-                  class="nav-link active"
-                  aria-current="page"
-                  href="record.html"
-                  >活動記録</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contact.html">お問い合わせ</a>
-              </li>
-            </ul>
+    <div class="screen">
+      <!-- header begin -->
+      <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="home.html"
+              ><picture>
+                <source
+                  srcset="images/icon.webp"
+                  media="(max-width:500px)"
+                  type="image/webp"
+                />
+                <source srcset="images/icon.jpg" media="(max-width:500px)" />
+                <source srcset="images/icon.webp" type="image/webp" />
+                <img
+                  class="icon"
+                  src="images/icon.jpg"
+                  loading="lazy"
+                  alt="すなめぐ"
+                />
+              </picture>
+            </a>
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#navbarSupportedContent"
+              aria-controls="navbarSupportedContent"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+            >
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a class="nav-link" href="students.html">学生の方へ</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="company.html">企業の方へ</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="about.html">すなめぐとは</a>
+                </li>
+                <li class="nav-item">
+                  <a
+                    class="nav-link active"
+                    aria-current="page"
+                    href="record.html"
+                    >活動記録</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="contact.html">お問い合わせ</a>
+                </li>
+              </ul>
+            </div>
           </div>
+        </nav>
+      </header>
+      <!-- header end -->
+      <!-- main begin -->
+      <main>
+        <div class="wrapper">
+          <h1>活動記録</h1>
+          <dl>
+            <dt>2022/6/19</dt>
+            <dd>「砂丘の恵みの納品依頼」設立</dd>
+            <dt>2022/7/23</dt>
+            <dd>第１回食料配布イベント</dd>
+            <dt>2022/10/22</dt>
+            <dd>第２回食料配布イベント</dd>
+            <dt>2022/11/12</dt>
+            <dd>第３回食料配布イベント</dd>
+            <dt>2023/1/15</dt>
+            <dd>
+              令和新時代創造県民運動活動表彰で、若者部門優秀賞かつ最優秀賞、とっとりSDGsアワード準グランプリの3つを受賞
+              <br /><picture>
+                <source
+                  srcset="images/award.webp"
+                  media="(max-width:500px)"
+                  type="image/webp"
+                />
+                <source srcset="images/award.jpg" media="(max-width:500px)" />
+                <source srcset="images/award.webp" type="image/webp" />
+                <img
+                  class="award"
+                  src="images/award.jpg"
+                  loading="lazy"
+                  alt="表彰状"
+                />
+              </picture>
+            </dd>
+          </dl>
         </div>
-      </nav>
-    </header>
-    <!-- header end -->
-    <!-- main begin -->
-    <main>
-      <div class="wrapper">
-        <h1>活動記録</h1>
-        <dl>
-          <dt>2022/6/19</dt>
-          <dd>「砂丘の恵みの納品依頼」設立</dd>
-          <dt>2022/7/23</dt>
-          <dd>第１回食料配布イベント</dd>
-          <dt>2022/10/22</dt>
-          <dd>第２回食料配布イベント</dd>
-          <dt>2022/11/12</dt>
-          <dd>第３回食料配布イベント</dd>
-          <dt>2023/1/15</dt>
-          <dd>
-            令和新時代創造県民運動活動表彰で、若者部門優秀賞かつ最優秀賞、とっとりSDGsアワード準グランプリの3つを受賞
-            <br /><picture>
-              <source
-                srcset="images/award.webp"
-                media="(max-width:500px)"
-                type="image/webp"
-              />
-              <source srcset="images/award.jpg" media="(max-width:500px)" />
-              <source srcset="images/award.webp" type="image/webp" />
-              <img
-                class="award"
-                src="images/award.jpg"
-                loading="lazy"
-                alt="表彰状"
-              />
-            </picture>
-          </dd>
-        </dl>
-      </div>
-    </main>
-    <!-- main end -->
-    <!-- footer begin -->
-    <footer class="py-4 mt-5 bg-dark text-center" id="footer">
-      <div class="container">
-        <p class="text-white-50 small">砂丘の恵みの納品依頼</p>
-      </div>
-    </footer>
-    <!-- footer end -->
+      </main>
+      <!-- main end -->
+      <!-- footer begin -->
+      <footer class="py-4 mt-5 bg-dark text-center" id="footer">
+        <div class="container">
+          <p class="text-white-50 small">砂丘の恵みの納品依頼</p>
+        </div>
+      </footer>
+      <!-- footer end -->
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-      crossorigin="anonymous"
-    ></script>
-    <script src="modernizr-custom.js"></script>
+      <script
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"
+      ></script>
+      <script src="modernizr-custom.js"></script>
+    </div>
   </body>
 </html>
