--- a/company.html
+++ b/company.html
@@ -42,188 +42,193 @@
     </script>
   </head>
   <body class="mv">
-    <!-- header begin -->
-    <header>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="home.html">
-            <picture>
-              <source
-                srcset="images/icon.webp"
-                media="(max-width:500px)"
-                type="image/webp"
-              />
-              <source srcset="images/icon.jpg" media="(max-width:500px)" />
-              <source srcset="images/icon.webp" type="image/webp" />
-              <img
-                class="icon"
-                src="images/icon.jpg"
-                loading="lazy"
-                alt="すなめぐ"
-              />
-            </picture>
-          </a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link" href="students.html">学生の方へ</a>
-              </li>
-              <li class="nav-item">
-                <a
-                  class="nav-link active"
-                  aria-current="page"
-                  href="company.html"
-                  >企業の方へ</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="about.html">すなめぐとは</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="record.html">活動記録</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contact.html">お問い合わせ</a>
-              </li>
-            </ul>
+    <div class="screen">
+      <!-- header begin -->
+      <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="home.html">
+              <picture>
+                <source
+                  srcset="images/icon.webp"
+                  media="(max-width:500px)"
+                  type="image/webp"
+                />
+                <source srcset="images/icon.jpg" media="(max-width:500px)" />
+                <source srcset="images/icon.webp" type="image/webp" />
+                <img
+                  class="icon"
+                  src="images/icon.jpg"
+                  loading="lazy"
+                  alt="すなめぐ"
+                />
+              </picture>
+            </a>
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#navbarSupportedContent"
+              aria-controls="navbarSupportedContent"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+            >
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a class="nav-link" href="students.html">学生の方へ</a>
+                </li>
+                <li class="nav-item">
+                  <a
+                    class="nav-link active"
+                    aria-current="page"
+                    href="company.html"
+                    >企業の方へ</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="about.html">すなめぐとは</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="record.html">活動記録</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="contact.html">お問い合わせ</a>
+                </li>
+              </ul>
+            </div>
           </div>
+        </nav>
+      </header>
+      <!-- header end -->
+      <!-- main begin -->
+      <main>
+        <div class="documents wrapper">
+          <picture>
+            <source
+              srcset="images/introduction.webp"
+              media="(max-width:500px)"
+              type="image/webp"
+            />
+            <source
+              srcset="images/introduction.jpg"
+              media="(max-width:500px)"
+            />
+            <source srcset="images/introduction.webp" type="image/webp" />
+            <img
+              src="images/introduction.jpg"
+              loading="lazy"
+              alt="「すなめぐ」とは？"
+            />
+          </picture>
+          <picture>
+            <source
+              srcset="images/life.webp"
+              media="(max-width:500px)"
+              type="image/webp"
+            />
+            <source srcset="images/life.jpg" media="(max-width:500px)" />
+            <source srcset="images/life.webp" type="image/webp" />
+            <img src="images/life.jpg" loading="lazy" alt="学生の生活実態" />
+          </picture>
+          <picture>
+            <source
+              srcset="images/chance.webp"
+              media="(max-width:500px)"
+              type="image/webp"
+            />
+            <source srcset="images/chance.jpg" media="(max-width:500px)" />
+            <source srcset="images/chance.webp" type="image/webp" />
+            <img
+              src="images/chance.jpg"
+              loading="lazy"
+              alt="団体設立のきっかけ"
+            />
+          </picture>
+          <picture>
+            <source
+              srcset="images/ambition.webp"
+              media="(max-width:500px)"
+              type="image/webp"
+            />
+            <source srcset="images/ambition.jpg" media="(max-width:500px)" />
+            <source srcset="images/ambition.webp" type="image/webp" />
+            <img
+              src="images/ambition.jpg"
+              loading="lazy"
+              alt="この活動に対する思い"
+            />
+          </picture>
         </div>
-      </nav>
-    </header>
-    <!-- header end -->
-    <!-- main begin -->
-    <main>
-      <div class="documents wrapper">
-        <picture>
-          <source
-            srcset="images/introduction.webp"
-            media="(max-width:500px)"
-            type="image/webp"
-          />
-          <source srcset="images/introduction.jpg" media="(max-width:500px)" />
-          <source srcset="images/introduction.webp" type="image/webp" />
-          <img
-            src="images/introduction.jpg"
-            loading="lazy"
-            alt="「すなめぐ」とは？"
-          />
-        </picture>
-        <picture>
-          <source
-            srcset="images/life.webp"
-            media="(max-width:500px)"
-            type="image/webp"
-          />
-          <source srcset="images/life.jpg" media="(max-width:500px)" />
-          <source srcset="images/life.webp" type="image/webp" />
-          <img src="images/life.jpg" loading="lazy" alt="学生の生活実態" />
-        </picture>
-        <picture>
-          <source
-            srcset="images/chance.webp"
-            media="(max-width:500px)"
-            type="image/webp"
-          />
-          <source srcset="images/chance.jpg" media="(max-width:500px)" />
-          <source srcset="images/chance.webp" type="image/webp" />
-          <img
-            src="images/chance.jpg"
-            loading="lazy"
-            alt="団体設立のきっかけ"
-          />
-        </picture>
-        <picture>
-          <source
-            srcset="images/ambition.webp"
-            media="(max-width:500px)"
-            type="image/webp"
-          />
-          <source srcset="images/ambition.jpg" media="(max-width:500px)" />
-          <source srcset="images/ambition.webp" type="image/webp" />
-          <img
-            src="images/ambition.jpg"
-            loading="lazy"
-            alt="この活動に対する思い"
-          />
-        </picture>
-      </div>
 
-      <div class="wrapper">
-        <h1>協賛企業</h1>
-        <div class="row gy-3">
-          <div class="col-lo-4 col-sm-6">
-            <picture>
-              <source
-                srcset="images/company/tokudashoten.webp"
-                media="(max-width:500px)"
-                type="image/webp"
-              />
-              <source
-                srcset="images/company/tokudashoten.jpg"
-                media="(max-width:500px)"
-              />
-              <source
-                srcset="images/company/tokudashoten.webp"
-                type="image/webp"
-              />
-              <img
-                src="images/company/tokudashoten.jpg"
-                loading="lazy"
-                alt="徳田商店"
-              />
-            </picture>
+        <div class="wrapper">
+          <h1>協賛企業</h1>
+          <div class="row gy-3">
+            <div class="col-lo-4 col-sm-6">
+              <picture>
+                <source
+                  srcset="images/company/tokudashoten.webp"
+                  media="(max-width:500px)"
+                  type="image/webp"
+                />
+                <source
+                  srcset="images/company/tokudashoten.jpg"
+                  media="(max-width:500px)"
+                />
+                <source
+                  srcset="images/company/tokudashoten.webp"
+                  type="image/webp"
+                />
+                <img
+                  src="images/company/tokudashoten.jpg"
+                  loading="lazy"
+                  alt="徳田商店"
+                />
+              </picture>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="wrapper">
-        <h1>協力企業</h1>
-        <div class="row gy-3">
-          <div class="col-lo-4 col-sm-6">
-            <picture>
-              <source
-                srcset="images/company/BFロゴ.webp"
-                media="(max-width:500px)"
-                type="image/webp"
-              />
-              <source
-                srcset="images/company/BFロゴ.jpg"
-                media="(max-width:500px)"
-              />
-              <source srcset="images/company/BFロゴ.webp" type="image/webp" />
-              <img
-                src="images/company/BFロゴ.jpg"
-                loading="lazy"
-                alt="ビーフリー"
-              />
-            </picture>
+        <div class="wrapper">
+          <h1>協力企業</h1>
+          <div class="row gy-3">
+            <div class="col-lo-4 col-sm-6">
+              <picture>
+                <source
+                  srcset="images/company/BFロゴ.webp"
+                  media="(max-width:500px)"
+                  type="image/webp"
+                />
+                <source
+                  srcset="images/company/BFロゴ.jpg"
+                  media="(max-width:500px)"
+                />
+                <source srcset="images/company/BFロゴ.webp" type="image/webp" />
+                <img
+                  src="images/company/BFロゴ.jpg"
+                  loading="lazy"
+                  alt="ビーフリー"
+                />
+              </picture>
+            </div>
           </div>
         </div>
-      </div>
-    </main>
-    <!-- main end -->
-    <!-- footer begin -->
-    <footer class="py-4 mt-5 bg-dark text-center" id="footer">
-      <div class="container">
-        <p class="text-white-50 small">砂丘の恵みの納品依頼</p>
-      </div>
-    </footer>
-    <!-- footer end -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-      crossorigin="anonymous"
-    ></script>
-    <script src="modernizr-custom.js"></script>
+      </main>
+      <!-- main end -->
+      <!-- footer begin -->
+      <footer class="py-4 mt-5 bg-dark text-center" id="footer">
+        <div class="container">
+          <p class="text-white-50 small">砂丘の恵みの納品依頼</p>
+        </div>
+      </footer>
+      <!-- footer end -->
+      <script
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"
+      ></script>
+      <script src="modernizr-custom.js"></script>
+    </div>
   </body>
 </html>
